// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First name render a disabled field 1`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a disabled field 2`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with default settings 1`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with default settings 2`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with error 1`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with error 2`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with value 1`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value="some value"
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;

exports[`First name render a field with value 2`] = `
<div id="firstNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="firstName"
     data-validate="required"
>
  <label for="firstName"
         class="o-forms__label"
  >
    First name
  </label>
  <input type="text"
         id="firstName"
         name="firstName"
         placeholder="Enter your first name"
         autocomplete="given-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-name"
         aria-required="true"
         required
         value="some value"
  >
  <div class="o-forms__errortext">
    Please enter your first name
  </div>
</div>
`;
